Add workflow to run sanity test suite on PR (#991)
* hi there

* [gh] fix test workflow

* rebuild actions

* [gh] fix parser action

* [gh] build parser action

* [gh] fix test wf

* [gh] parser action update logging

* [gh] test with links

* fix api keys

* remove txt file

* fix

* @applitools/test-utils@1.3.4

* fix build

* fix parser

* fix parser

* fix parser

* NO_CHANGELOG

* fix

* add logs to link script

* fix

* logs

* fix

* log

* log

* fix

* fix

* fix

* fix

* fix

* fix

* forget about CVG_TESTS_REMOTE

* fix

* fix

--- a/.github/actions/tests/action.yml
+++ b/.github/actions/tests/action.yml
@@ -21,10 +21,6 @@ inputs:
   links:
     description: names of package directories to link before testing
     type: string
-  linking-depth:
-    description: linking depth
-    type: string
-    default: 0
   grep:
     description: grep pattern to filter tests
     type: string
@@ -68,8 +64,11 @@ runs:
         if [ ! -z "${{inputs.links}}" ]
         then
           echo "::group::Linking dependencies"
-          npx link --include scripts --install
-          node ./node_modules/.bin/link --include ${{inputs.links}} --build --install --max-depth ${{inputs.linking-depth}}
+          yarn --cwd ../scripts install
+          yarn --cwd ../scripts link
+          yarn link @applitools/scripts
+          npx link "${{inputs.links}}" --build --install
+          ls -F ./node_modules/@applitools
           echo "::endgroup::"
         fi
 
