--- a/.github/workflows/publish-ufg-client.yml
+++ b/.github/workflows/publish-ufg-client.yml
@@ -17,17 +17,14 @@ on:
     secrets:
       NPM_TOKEN:
         required: true
-      APPLITOOLS_API_KEY:
-        required: true
-      APPLITOOLS_API_KEY_SDK:
+      APPLITOOLS_API_KEY_JSSDK:
         required: true
       APPLITOOLS_API_KEY_READ:
         required: true
 
 env:
   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-  APPLITOOLS_API_KEY: ${{secrets.APPLITOOLS_API_KEY}}
-  APPLITOOLS_API_KEY_SDK: ${{secrets.APPLITOOLS_API_KEY_SDK}}
+  APPLITOOLS_API_KEY: ${{secrets.APPLITOOLS_API_KEY_JSSDK}}
   APPLITOOLS_API_KEY_READ: ${{secrets.APPLITOOLS_API_KEY_READ}}
   FORCE_COLOR: 3
 
