--- a/js/packages/eyes-playwright/package.json
+++ b/js/packages/eyes-playwright/package.json
@@ -44,7 +44,7 @@
     "report": "coverage-tests report https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes-playwright'",
     "upgrade:framework": "if [ ! -z $APPLITOOLS_PLAYWRIGHT_VERSION ]; then packagejson=`cat package.json`; yarn upgrade --no-lockfile playwright@$APPLITOOLS_PLAYWRIGHT_VERSION; echo \"$packagejson\" > package.json; fi",
     "deps": "bongo deps",
-    "gh:test": "gh workflow run test.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='playwright' -f links='types test-utils sdk-shared eyes-sdk-core visual-grid-client eyes-api spec-driver-playwright utils driver snippets screenshoter' -f linking-depth=3",
+    "gh:test": "gh workflow run test.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='playwright' -f links='types test-utils sdk-shared eyes-sdk-core visual-grid-client eyes-api spec-driver-playwright utils driver snippets screenshoter'",
     "gh:publish": "gh workflow run publish-playwright.yml --ref $(git rev-parse --abbrev-ref HEAD)",
     "preversion": "bongo preversion --verifyPendingChanges && yarn build",
     "version": "bongo version --withPendingChanges",
