--- a/js/packages/eyes-selenium/package.json
+++ b/js/packages/eyes-selenium/package.json
@@ -31,7 +31,9 @@
     "name": "Applitools Team",
     "email": "team@applitools.com"
   },
-  "aliases": ["selenium"],
+  "aliases": [
+    "selenium"
+  ],
   "main": "./dist/index.js",
   "types": "./types/index.d.ts",
   "files": [
@@ -51,7 +53,7 @@
     "docker:teardown": "docker-compose down",
     "upgrade:framework": "if [ ! -z $APPLITOOLS_SELENIUM_MAJOR_VERSION ]; then packagejson=`cat package.json`; yarn upgrade --no-lockfile selenium-webdriver@$APPLITOOLS_SELENIUM_MAJOR_VERSION; echo \"$packagejson\" > package.json; fi",
     "deps": "bongo deps",
-    "gh:test": "gh workflow run test.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='selenium selenium@3' -f links='types test-utils sdk-shared eyes-sdk-core visual-grid-client eyes-api spec-driver-selenium utils driver snippets screenshoter' -f linking-depth=3",
+    "gh:test": "gh workflow run test.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='selenium selenium@3' -f links='types test-utils sdk-shared eyes-sdk-core visual-grid-client eyes-api spec-driver-selenium utils driver snippets screenshoter'",
     "gh:publish": "gh workflow run publish-selenium.yml --ref $(git rev-parse --abbrev-ref HEAD)",
     "preversion": "bongo preversion --verifyPendingChanges && yarn build",
     "version": "bongo version --withPendingChanges",
@@ -63,18 +65,18 @@
     }
   },
   "dependencies": {
-    "@applitools/eyes-api": "1.5.4",
-    "@applitools/eyes-sdk-core": "13.6.33",
-    "@applitools/spec-driver-selenium": "1.3.8",
-    "@applitools/visual-grid-client": "15.12.41"
+    "@applitools/eyes-api": "1.7.2",
+    "@applitools/eyes-sdk-core": "13.8.6",
+    "@applitools/spec-driver-selenium": "1.3.12",
+    "@applitools/visual-grid-client": "15.13.1"
   },
   "devDependencies": {
-    "@applitools/api-extractor": "1.2.8",
+    "@applitools/api-extractor": "1.2.9",
     "@applitools/bongo": "^2.1.5",
     "@applitools/scripts": "1.1.0",
     "@applitools/sdk-coverage-tests": "2.3.18",
-    "@applitools/sdk-shared": "0.9.11",
-    "@applitools/test-utils": "1.3.2",
+    "@applitools/sdk-shared": "0.9.12",
+    "@applitools/test-utils": "1.3.4",
     "@types/node": "12",
     "@types/selenium-webdriver": "^4.1.1",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
