--- a/js/packages/eyes-testcafe/package.json
+++ b/js/packages/eyes-testcafe/package.json
@@ -25,7 +25,9 @@
     "name": "Applitools Team",
     "email": "team@applitools.com"
   },
-  "aliases": ["testcafe"],
+  "aliases": [
+    "testcafe"
+  ],
   "main": "./dist/index-legacy.js",
   "types": "./types/index-legacy.d.ts",
   "files": [
@@ -59,7 +61,7 @@
     "test:coverage:custom": "yarn generate:tests && APPLITOOLS_USE_PRELOADED_CONFIG=true APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe (custom)' APPLITOOLS_BATCH_ID=$(uuidgen) testcafe chrome:headless test/custom --reporter spec,xunit:coverage-test-report.xml",
     "report": "coverage-tests report ./test/coverage/config.js --name 'eyes-testcafe'",
     "deps": "bongo deps",
-    "gh:test": "gh workflow run test.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='testcafe' -f links='eyes-sdk-core eyes-api types test-utils utils driver snippets screenshoter sdk-shared visual-grid-client' -f linking-depth=3",
+    "gh:test": "gh workflow run test.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='testcafe' -f links='eyes-sdk-core eyes-api types test-utils utils driver snippets screenshoter sdk-shared visual-grid-client'",
     "gh:publish": "gh workflow run publish-testcafe.yml --ref $(git rev-parse --abbrev-ref HEAD)",
     "preversion": "yarn deps && bongo preversion --verifyPendingChanges && yarn build",
     "version": "bongo version --withPendingChanges",
@@ -71,19 +73,19 @@
     }
   },
   "dependencies": {
-    "@applitools/eyes-api": "1.5.4",
-    "@applitools/eyes-sdk-core": "13.6.32",
-    "@applitools/utils": "1.3.6",
-    "@applitools/visual-grid-client": "15.12.40"
+    "@applitools/eyes-api": "1.7.2",
+    "@applitools/eyes-sdk-core": "13.8.6",
+    "@applitools/utils": "1.3.9",
+    "@applitools/visual-grid-client": "15.13.1"
   },
   "devDependencies": {
-    "@applitools/api-extractor": "1.2.8",
+    "@applitools/api-extractor": "1.2.9",
     "@applitools/bongo": "^2.1.5",
     "@applitools/scripts": "1.1.0",
     "@applitools/sdk-coverage-tests": "^2.3.18",
-    "@applitools/sdk-shared": "0.9.11",
-    "@applitools/test-server": "1.0.10",
-    "@applitools/test-utils": "1.3.2",
+    "@applitools/sdk-shared": "0.9.12",
+    "@applitools/test-server": "1.1.3",
+    "@applitools/test-utils": "1.3.4",
     "@types/node": "12",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
