--- a/js/packages/eyes-webdriverio-4/package.json
+++ b/js/packages/eyes-webdriverio-4/package.json
@@ -9,7 +9,10 @@
   },
   "license": "SEE LICENSE IN LICENSE",
   "author": "Applitools Team <team@applitools.com> (http://www.applitools.com/)",
-  "aliases": ["webdriverio-legacy", "wdio-legacy"],
+  "aliases": [
+    "webdriverio-legacy",
+    "wdio-legacy"
+  ],
   "main": "./dist/index.js",
   "types": "./types/index.d.ts",
   "files": [
@@ -29,7 +32,7 @@
     "docker:setup": "node ../scripts/scripts/generate-docker-compose-config.js && docker-compose up -d",
     "docker:teardown": "docker-compose down",
     "deps": "bongo deps",
-    "gh:test": "gh workflow run test.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='wdio-legacy' -f links='eyes-sdk-core eyes-api types test-utils utils driver snippets screenshoter sdk-shared visual-grid-client' -f linking-depth=3",
+    "gh:test": "gh workflow run test.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='wdio-legacy' -f links='eyes-sdk-core eyes-api types test-utils utils driver snippets screenshoter sdk-shared visual-grid-client'",
     "gh:publish": "gh workflow run publish.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='wdio-legacy'",
     "preversion": "bongo preversion && yarn build",
     "version": "bongo version",
@@ -41,19 +44,19 @@
     }
   },
   "dependencies": {
-    "@applitools/eyes-api": "1.1.6",
-    "@applitools/eyes-sdk-core": "12.24.0",
-    "@applitools/types": "1.0.19",
-    "@applitools/utils": "1.2.4",
-    "@applitools/visual-grid-client": "15.8.44"
+    "@applitools/eyes-api": "1.7.2",
+    "@applitools/eyes-sdk-core": "13.8.6",
+    "@applitools/types": "1.5.5",
+    "@applitools/utils": "1.3.9",
+    "@applitools/visual-grid-client": "15.13.1"
   },
   "devDependencies": {
-    "@applitools/api-extractor": "1.2.2",
+    "@applitools/api-extractor": "1.2.9",
     "@applitools/bongo": "^2.1.5",
-    "@applitools/scripts": "1.0.1",
-    "@applitools/sdk-coverage-tests": "2.3.16",
-    "@applitools/sdk-shared": "0.9.8",
-    "@applitools/test-utils": "1.0.9",
+    "@applitools/scripts": "1.1.0",
+    "@applitools/sdk-coverage-tests": "2.3.18",
+    "@applitools/sdk-shared": "0.9.12",
+    "@applitools/test-utils": "1.3.3",
     "@types/mocha": "^9.0.0",
     "@types/webdriverio": "4.13.3",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
