--- a/js/packages/bongo/package.json
+++ b/js/packages/bongo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/bongo",
-  "version": "2.1.5",
+  "version": "2.1.6",
   "engines": {
     "node": ">=12.0.0"
   },
@@ -23,7 +23,9 @@
     "url": "git+https://github.com/applitools/eyes.sdk.javascript1.git",
     "directory": "js/packages/bongo"
   },
-  "aliases": ["bongo"],
+  "aliases": [
+    "bongo"
+  ],
   "scripts": {
     "bongo": "src/cli/index.js",
     "lint": "eslint . --ext .js",
