--- a/js/packages/eyes-browser-extension/package.json
+++ b/js/packages/eyes-browser-extension/package.json
@@ -11,7 +11,10 @@
     "name": "Applitools Team",
     "email": "team@applitools.com"
   },
-  "aliases": ["browser-extension", "extension"],
+  "aliases": [
+    "browser-extension",
+    "extension"
+  ],
   "scripts": {
     "lint": "eslint '**/*.js'",
     "build": "yarn build:dist && yarn build:zip",
@@ -37,7 +40,7 @@
     "webextension-polyfill": "0.7.0"
   },
   "devDependencies": {
-    "@applitools/bongo": "^2.1.5",
+    "@applitools/bongo": "^2.1.6",
     "@applitools/scripts": "^1.0.1",
     "@applitools/sdk-coverage-tests": "^2.3.15",
     "@applitools/spec-driver-playwright": "^1.2.0",
