--- a/js/packages/eyes-webdriverio-5-service/package.json
+++ b/js/packages/eyes-webdriverio-5-service/package.json
@@ -19,13 +19,16 @@
   "bugs": {
     "url": "https://github.com/applitools/eyes-webdriverio5-service/issues"
   },
-  "aliases": ["webdriverio-service", "wdio-service"],
+  "aliases": [
+    "webdriverio-service",
+    "wdio-service"
+  ],
   "main": "index.js",
   "dependencies": {
     "@applitools/eyes-webdriverio": "5.34.16"
   },
   "devDependencies": {
-    "@applitools/bongo": "^2.1.5",
+    "@applitools/bongo": "^2.1.6",
     "@applitools/test-utils": "^1.3.2",
     "@wdio/cli": "7.19.7",
     "@wdio/dot-reporter": "7.19.7",
