--- a/js/packages/spec-driver-playwright/package.json
+++ b/js/packages/spec-driver-playwright/package.json
@@ -25,7 +25,9 @@
     "name": "Applitools Team",
     "email": "team@applitools.com"
   },
-  "aliases": ["spec-playwright"],
+  "aliases": [
+    "spec-playwright"
+  ],
   "main": "./dist/index.js",
   "types": "./types/index.d.ts",
   "files": [
@@ -58,7 +60,7 @@
   },
   "devDependencies": {
     "@applitools/api-extractor": "^1.2.7",
-    "@applitools/bongo": "^2.1.5",
+    "@applitools/bongo": "^2.1.6",
     "@applitools/scripts": "1.1.0",
     "@applitools/test-utils": "1.3.2",
     "@types/mocha": "^9.0.0",
