--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -1,14 +1,16 @@
 name: .changelog
 
-on: pull_request
+on: 
+  pull_request:
+    types: [opened, reopened, synchronize, ready_for_review]
 
 jobs:
   changelog:
+    if: ${{!contains(github.event.head_commit.message, '[Security]') && !github.event.pull_request.draft}}
     runs-on: ubuntu-latest
     name: changelog
     steps:
       - uses: actions/checkout@v3
-        if: "!contains(github.event.head_commit.message, '[Security]')"
         with:
           fetch-depth: 0
       - uses: actions/setup-node@v1
