--- a/js/packages/screenshoter/package.json
+++ b/js/packages/screenshoter/package.json
@@ -81,9 +81,9 @@
   "devDependencies": {
     "@applitools/bongo": "^2.1.6",
     "@applitools/driver": "^1.9.9",
-    "@applitools/scripts": "1.1.0",
-    "@applitools/spec-driver-webdriverio": "1.2.14",
-    "@applitools/test-utils": "1.3.3",
+    "@applitools/scripts": "^1.1.0",
+    "@applitools/spec-driver-webdriverio": "^1.2.15",
+    "@applitools/test-utils": "^1.3.4",
     "appium": "^1.22.3",
     "chromedriver": "^101.0.0",
     "eslint": "^8.16.0",
