gh: bring CVG_TESTS_REMOTE back to fix failing core tests, will need to resolve underlying issue later so we can remove this env var

--- a/.github/workflows/publish-core.yml
+++ b/.github/workflows/publish-core.yml
@@ -38,6 +38,7 @@ env:
   SAUCE_ACCESS_KEY: ${{secrets.SAUCE_ACCESS_KEY}}
   BROWSERSTACK_USERNAME: ${{secrets.BROWSERSTACK_USERNAME}}
   BROWSERSTACK_ACCESS_KEY: ${{secrets.BROWSERSTACK_ACCESS_KEY}}
+  CVG_TESTS_REMOTE: http://localhost:4444/wd/hub
 
 jobs:
   test:
