gh: update API key for core publishing workflow

--- a/.github/workflows/publish-core.yml
+++ b/.github/workflows/publish-core.yml
@@ -21,6 +21,8 @@ on:
         required: true
       APPLITOOLS_API_KEY_SDK:
         required: true
+      APPLITOOLS_API_KEY_JSSDK:
+        required: true
       APPLITOOLS_API_KEY_READ:
         required: true
       SAUCE_USERNAME:
@@ -31,7 +33,7 @@ on:
 env:
   FORCE_COLOR: 3
   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-  APPLITOOLS_API_KEY: ${{secrets.APPLITOOLS_API_KEY}}
+  APPLITOOLS_API_KEY: ${{secrets.APPLITOOLS_API_KEY_JSSDK}}
   APPLITOOLS_API_KEY_SDK: ${{secrets.APPLITOOLS_API_KEY_SDK}}
   APPLITOOLS_API_KEY_READ: ${{secrets.APPLITOOLS_API_KEY_READ}}
   SAUCE_USERNAME: ${{secrets.SAUCE_USERNAME}}
