--- a/.github/workflows/publish-spec-webdriverio.yml
+++ b/.github/workflows/publish-spec-webdriverio.yml
@@ -34,7 +34,7 @@ jobs:
     strategy:
       matrix:
         framework-version: [5, 6, 7]
-        node-version: [12, 14, 16, 18]
+        node-version: [12, 14, 16]
     name: 'Test (wdio: ${{matrix.framework-version}}, node: ${{matrix.node-version}})'
     runs-on: ubuntu-latest
     env:
