--- a/.github/actions/parser/package.json
+++ b/.github/actions/parser/package.json
@@ -7,7 +7,11 @@
   },
   "dependencies": {
     "@actions/core": "^1.1.0",
-    "@actions/github": "^5.0.3"
+    "@actions/github": "^5.0.3",
+    "configparser": "^0.3.9",
+    "ini": "^3.0.0",
+    "multi-ini": "^2.2.0",
+    "pyconf": "^1.1.7"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.34.0"
