[gh] run python tests only for python PRs

--- a/.github/workflows/py-tests.yaml
+++ b/.github/workflows/py-tests.yaml
@@ -1,6 +1,8 @@
 name: Build and test python packages
 on:
   pull_request:
+    paths:
+      - 'python/**'
   workflow_dispatch:
   workflow_call:
     inputs:
