--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   verify:
-    if: ${{!contains(github.event.head_commit.message, '[Security]') && !github.event.pull_request.draft}}
+    if: ${{(github.actor != 'dependabot' && !github.event.pull_request.draft}}
     runs-on: ubuntu-latest
     name: Verify changelog
     steps:
