[py] fix github workflow upload-artifacts directory flattening (#999)
[py] add license files presence tests
[py] explicitly mention license files in setup.cfg
[py] use new setuptools when building package

--- a/python/Makefile
+++ b/python/Makefile
@@ -64,6 +64,10 @@ publish_testing_eyes_universal: eyes_universal/dist install_publish_requirements
 	twine upload --verbose --repository testpypi eyes_universal/dist/*
 
 
+install_build_requirements:
+	python -m pip install --upgrade setuptools
+
+
 install_publish_requirements:
 	python -m pip install twine
 
@@ -71,15 +75,15 @@ install_publish_requirements:
 dist: eyes_universal/dist eyes_selenium/dist eyes_robotframework/dist
 
 
-eyes_universal/dist:
+eyes_universal/dist: install_build_requirements
 	cd eyes_universal && make dist
 
 
-eyes_selenium/dist:
+eyes_selenium/dist: install_build_requirements
 	cd eyes_selenium && python setup.py --quiet sdist
 
 
-eyes_robotframework/dist:
+eyes_robotframework/dist: install_build_requirements
 	cd eyes_robotframework && python setup.py --quiet sdist
 
 
