--- a/python/eyes_robotframework/setup.cfg
+++ b/python/eyes_robotframework/setup.cfg
@@ -17,6 +17,8 @@ author = Applitools Team
 author_email = team@applitools.com
 url = http://www.applitools.com
 long_description = file: README.rst
+license = Applitools SDK License
+license_file = LICENSE
 platforms = Linux, MacOS, Windows
 keywords = applitools, robotframework, eyes, eyes_selenium, selenium, appium
 classifiers =
