--- a/python/eyes_selenium/setup.cfg
+++ b/python/eyes_selenium/setup.cfg
@@ -17,9 +17,11 @@ author = Applitools Team
 author_email = team@applitools.com
 url = http://www.applitools.com
 long_description = file: README.rst
+license = Applitools SDK License
+license_file = LICENSE
 platforms = Linux, MacOS, Windows
 keywords = applitools, eyes, eyes_selenium
-classifiers = 
+classifiers =
 	Programming Language :: Python
 	Development Status :: 4 - Beta
 	Intended Audience :: Developers
@@ -31,7 +33,7 @@ classifiers =
 
 [options]
 packages = find:
-install_requires = 
+install_requires =
 	Appium-Python-Client>=0.4,<1.0.0;python_version<'3.0'
 	Appium-Python-Client<2          ;python_version>='3.0' and python_version<'3.7'
 	Appium-Python-Client<3          ;python_version>='3.7'
