--- a/.github/workflows/py-tests.yaml
+++ b/.github/workflows/py-tests.yaml
@@ -31,10 +31,10 @@ jobs:
         with:
           name: packages
           if-no-files-found: error
-          # the [n] wildcard in pytho[n] is not to match anything, but to prevent
+          # the * wildcard in pyth*n is not to match anything, but to prevent
           # upload-artifact from flattening python directory, e.g. uploading
           # it's contents without python directory itself.
-          path: "pytho[n]/*/dist/"
+          path: "pyth*n/*/dist/"
 
   unit-tests:
     needs: dist-build
