--- a/python/eyes_universal/setup.cfg
+++ b/python/eyes_universal/setup.cfg
@@ -12,13 +12,15 @@ description = Applitools Eyes Universal SDK Server
 author = Applitools Team
 author_email = team@applitools.com
 url = http://www.applitools.com
-project_urls = 
+project_urls =
 	Bug Reports=https://github.com/applitools/eyes.sdk.python/issues
 	Source=https://github.com/applitools/eyes.sdk.javascript1/tree/master/packages/eyes-universal
 version = attr: applitools.eyes_universal.__version__
 long_description = file: README.rst
+license = Applitools SDK License
+license_file = LICENSE
 platforms = Linux, MacOS, Windows
-classifiers = 
+classifiers =
 	Programming Language :: Python
 	Development Status :: 4 - Beta
 	Intended Audience :: Developers
