--- a/js/packages/eyes-selenium/package.json
+++ b/js/packages/eyes-selenium/package.json
@@ -81,7 +81,7 @@
     "@types/selenium-webdriver": "^4.1.1",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
-    "chromedriver": "^87.0.4",
+    "chromedriver": "102",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-mocha-no-only": "^1.1.1",
