--- a/.github/workflows/publish-spec-selenium.yml
+++ b/.github/workflows/publish-spec-selenium.yml
@@ -33,7 +33,7 @@ jobs:
     strategy:
       matrix:
         framework-version: [3, 4]
-        node-version: [12, 14, 16, 18]
+        node-version: [12, 14, 16]
     name: 'Test (selenium: ${{matrix.framework-version}}, node: ${{matrix.node-version}})'
     runs-on: ubuntu-latest
     env:
