--- a/.github/workflows/publish-webdriverio.yml
+++ b/.github/workflows/publish-webdriverio.yml
@@ -77,6 +77,7 @@ jobs:
     needs: [verify]
     strategy:
       max-parallel: 3
+      fail-fast: false
       matrix:
         include: ${{fromJSON(needs.verify.outputs.environments)}}
     name: 'Test (wdio: ${{matrix.framework-version}}, node: ${{matrix.node-version}})'
