--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -71,6 +71,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
+    - Fix use cases where we fail to serialize elements 
     - Fixed bug where a failure in a single UFG environment fails all other environments in the same configuration 
 "@applitools/eyes-storybook":
   feature:
