--- a/js/packages/eyes-cypress/.eslintrc.json
+++ b/js/packages/eyes-cypress/.eslintrc.json
@@ -7,7 +7,15 @@
     "types/",
     "test/generic",
     "*.d.ts",
-    "*.ts"
+    "*.ts",
+    "applitools.config.js",
+    "test/coverage/generic/cypress.config.js",
+    "test/unit/setup/fixtures/pluginCypress10.js",
+    "test/unit/setup/fixtures/cypressConfig-legacy-file/cypress.config.js",
+    "test/play/support.js",
+    "test/unit/setup/fixtures/supportFile-handle-commands.js",
+    "test/it/setup/fixtures/cypress.config.js",
+    "test/play/cypress"
   ],
   "env": {
     "commonjs": true,
