--- a/js/packages/eyes-cypress/.gitignore
+++ b/js/packages/eyes-cypress/.gitignore
@@ -16,6 +16,11 @@ test/cypress
 **/.debug
 example.json
 test/coverage/generic/cypress/integration/generic
+test/coverage/generic/cypress/e2e/generic
 test/coverage/generic/cypress/screenshots
 test/coverage/generic/package-lock.json
+test/play/yarn.lock
+test/coverage/generic/yarn.lock
+test/play/cypress/
 !/bin
+applitools.config.js
