--- a/js/packages/eyes-cypress/package.json
+++ b/js/packages/eyes-cypress/package.json
@@ -31,16 +31,16 @@
     "test": "yarn test:unit && yarn test:it && yarn test:e2e && yarn test:ts && yarn test:coverage",
     "test:sanity": "yarn test:unit && yarn test:it && yarn test:ts",
     "test:unit": "mocha --no-timeouts 'test/unit/**/*.test.js'",
-    "test:it": "mocha --no-timeouts 'test/it/**/*.test.js'",
+    "test:it": "yarn build && mocha --no-timeouts 'test/it/**/*.test.js'",
     "test:ts": "yarn test:ts:compile && yarn test:ts:run",
     "test:ts:compile": "tsc --project test/e2e/ts/cypress",
     "test:ts:run": "cypress run --config-file test/e2e/ts/cypress-ts.json",
+    "test:coverage": "yarn generate:tests && cd test/coverage/generic && yarn && unset APPLITOOLS_API_KEY && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-selenium' APPLITOOLS_BATCH_ID=$(uuidgen) npx cypress run",
     "test:e2e": "mkdir -p test/fixtures/testAppCopies && mocha --no-timeouts 'test/e2e/**/*.test.js'",
-    "test:coverage": "yarn generate:tests && cd test/coverage/generic &&  unset APPLITOOLS_API_KEY && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-selenium' APPLITOOLS_BATCH_ID=$(uuidgen) cypress run",
     "cypress": "cypress open --config-file test/fixtures/cypress-play.json",
-    "cypress:new": "node_modules/cypress-new/bin/cypress open --config-file test/fixtures/cypress-play.json",
+    "cypress:new": "cd test/play && yarn && npx cypress open",
     "cypress:run": "cypress run --config-file test/fixtures/cypress-play.json --spec=test/fixtures/testApp/cypress/integration-play/play.js",
-    "cypress:run:new": "node_modules/cypress-new/bin/cypress run --config-file test/fixtures/cypress-play.json --spec=test/fixtures/testApp/cypress/integration-play/play.js",
+    "cypress:run:new": "cd test/play && yarn && npx cypress run --spec=../fixtures/testApp/cypress/integration-play/play.js",
     "cypress:play": "cd test/fixtures/testApp && cypress run --config integrationFolder=cypress/integration-play,pluginsFile=cypress/plugins/index-play.js,supportFile=cypress/support/index-run.js --spec=cypress/integration-play/play.js",
     "render": "run(){ npx cypress run --config integrationFolder=test/fixtures/testApp/cypress/render,pluginsFile=test/fixtures/testApp/cypress/plugins/index-render.js,supportFile=test/fixtures/testApp/cypress/support/index-run.js --env url=$1; }; run",
     "prepublish:setup": "sudo apt-get install xvfb",
@@ -55,11 +55,11 @@
     }
   },
   "dependencies": {
-    "@applitools/eyes-api": "1.7.0",
-    "@applitools/eyes-universal": "2.9.1",
+    "@applitools/eyes-api": "1.7.2",
+    "@applitools/eyes-universal": "2.9.3",
     "@applitools/functional-commons": "1.6.0",
-    "@applitools/logger": "1.1.12",
-    "@applitools/visual-grid-client": "15.12.45",
+    "@applitools/logger": "1.1.13",
+    "@applitools/visual-grid-client": "15.13.1",
     "chalk": "3.0.0",
     "uuid": "8.3.2",
     "ws": "8.5.0"
@@ -69,10 +69,10 @@
     "@applitools/scripts": "1.1.0",
     "@applitools/sdk-coverage-tests": "^2.3.18",
     "@applitools/snaptdout": "1.0.1",
-    "@applitools/test-server": "1.1.1",
+    "@applitools/test-server": "1.1.3",
     "@applitools/test-utils": "1.3.3",
-    "@applitools/types": "^1.5.3",
-    "@applitools/utils": "1.3.8",
+    "@applitools/types": "^1.5.5",
+    "@applitools/utils": "1.3.9",
     "@types/node": "12",
     "@types/ws": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
@@ -80,8 +80,7 @@
     "chai": "4.2.0",
     "chai-spies": "1.0.0",
     "cookie-parser": "1.4.4",
-    "cypress": "6.5.0",
-    "cypress-new": "npm:cypress@9",
+    "cypress": "8.0.0",
     "eslint": "8.10.0",
     "eslint-plugin-mocha-no-only": "1.1.0",
     "eslint-plugin-node": "7.0.1",
