--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -69,7 +69,7 @@ Apollo SDK:
     - Fixed bug where a failure in a single UFG environment fails all other environments in the same configuration 
 "@applitools/eyes-cypress":
   feature:
-    - 
+    - Add support for cypress 10
   bug-fix:
     - Fix use cases where we fail to serialize elements 
     - Fixed bug where a failure in a single UFG environment fails all other environments in the same configuration 
