--- a/.github/workflows/publish-cypress.yml
+++ b/.github/workflows/publish-cypress.yml
@@ -23,13 +23,15 @@ on:
         required: true
       APPLITOOLS_API_KEY:
         required: true
+      APPLITOOLS_API_KEY_JSSDK:
+        required: true
       APPLITOOLS_API_KEY_READ:
         required: true
 
 env:
   FORCE_COLOR: 3
   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-  APPLITOOLS_API_KEY: ${{secrets.APPLITOOLS_API_KEY}}
+  APPLITOOLS_API_KEY: ${{secrets.APPLITOOLS_API_KEY_JSSDK}}
   APPLITOOLS_API_KEY_READ: ${{secrets.APPLITOOLS_API_KEY_READ}}
 
 jobs:
