--- a/.github/workflows/publish-cypress.yml
+++ b/.github/workflows/publish-cypress.yml
@@ -33,6 +33,7 @@ env:
   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
   APPLITOOLS_API_KEY: ${{secrets.APPLITOOLS_API_KEY_JSSDK}}
   APPLITOOLS_API_KEY_READ: ${{secrets.APPLITOOLS_API_KEY_READ}}
+  APPLITOOLS_API_KEY_SDK: ${{secrets.APPLITOOLS_API_KEY}}
 
 jobs:
   verify:
