--- a/.github/workflows/py-publish.yaml
+++ b/.github/workflows/py-publish.yaml
@@ -52,6 +52,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          ref: ${{needs.make_release_branch.outputs.release_branch}}
       - uses: actions/download-artifact@v3
         with:
           name: packages
@@ -62,9 +63,11 @@ jobs:
           RELEASE_TAG="@applitools/python/$PACKAGE@$PACKAGE_VERSION"
 
           make publish_$PACKAGE -e SDK_VERSION=$PACKAGE_VERSION
-          git tag -am "$PACKAGE v$PACKAGE_VERSION" "$RELEASE_TAG" origin/$RELEASE_BRANCH
+          git tag -am "$PACKAGE v$PACKAGE_VERSION" "$RELEASE_TAG" $RELEASE_BRANCH
           git push origin "$RELEASE_TAG"
-          git merge origin/$RELEASE_BRANCH
+          git checkout ${{github.ref_name}}
+          git pull
+          git merge $RELEASE_BRANCH --commit --no-edit
           git push origin
           git push origin --delete $RELEASE_BRANCH
         working-directory: python
