Feat/upgrade SIDE Eyes deps (#1004)
* js, side-eyes: update applitools deps and fix build errors

* side-eyes: update call to takeDomSnapshot so it passes the context instead of the driver

* js, side-eyes: add pending-changes entry and call vgc using target
instead of sizeMode

* js, side-eyes: fix lint

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -127,6 +127,6 @@ eyes-browser-extension:
       Fixed `forceFullPageScreenshot` option behavior
 applitools-for-selenium-ide:
   feature:
-    - 
+    - add support for capturing video blobs when running on the ultrafast grid
   bug-fix:
     - 
