[py] fix extra argument in Makefile

--- a/python/Makefile
+++ b/python/Makefile
@@ -29,22 +29,22 @@ uninstall:
 
 
 publish_eyes_selenium: eyes_selenium/dist install_publish_requirements
-	bash ./ci_scripts/send_mail.sh python ${SDK_VERSION} eyes_selenium/CHANGELOG.md
+	bash ./ci_scripts/send_mail.sh ${SDK_VERSION} eyes_selenium/CHANGELOG.md
 	twine upload --verbose eyes_selenium/dist/*
 
 
 publish_testing_eyes_selenium: eyes_selenium/dist install_publish_requirements
-	echo bash ./ci_scripts/send_mail.sh python ${SDK_VERSION} eyes_selenium/CHANGELOG.md
+	echo bash ./ci_scripts/send_mail.sh ${SDK_VERSION} eyes_selenium/CHANGELOG.md
 	twine upload --verbose --repository testpypi eyes_selenium/dist/*
 
 
 publish_eyes_robotframework: eyes_robotframework/dist install_publish_requirements
-	bash ./ci_scripts/send_mail.sh python ${SDK_VERSION} eyes_robotframework/CHANGELOG.md
+	bash ./ci_scripts/send_mail.sh ${SDK_VERSION} eyes_robotframework/CHANGELOG.md
 	twine upload --verbose eyes_robotframework/dist/*
 
 
 publish_testing_eyes_robotframework: eyes_robotframework/dist install_publish_requirements
-	echo bash ./ci_scripts/send_mail.sh python ${SDK_VERSION} eyes_robotframework/CHANGELOG.md
+	echo bash ./ci_scripts/send_mail.sh ${SDK_VERSION} eyes_robotframework/CHANGELOG.md
 	twine upload --verbose --repository testpypi eyes_robotframework/dist/*
 
 
